try to test AVX2 implementation of Rescue permutation on CI
Signed-off-by: Anjan Roy <hello@itzmeanjan.in>

--- a/.github/workflows/test_ci.yml
+++ b/.github/workflows/test_ci.yml
@@ -17,7 +17,11 @@ jobs:
       run: |
         sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-10 10
         sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-9 9
-    - name: Execute Tests
+    - name: Execute Tests ( non-AVX2 )
       run: make
+    - name: Cleanup
+      run: make clean
+    - name: Execute Tests ( AVX2 )
+      run: AVX2=1 make
     - name: Cleanup
       run: make clean
